# SmartBridge

./: README.md
.github/: FUNDING.yml
SmartBridge Android/: gradle.properties  settings.gradle.kts
SmartBridge Android/app/: build.gradle.kts
SmartBridge Android/app/src/androidTest/java/com/nilogax/smartbridge/: ExampleInstrumentedTest.kt
SmartBridge Android/app/src/main/: AndroidManifest.xml
SmartBridge Android/app/src/main/java/com/nilogax/smartbridge/: BootReceiver.kt  BoschBikeManager.kt  MainActivity.kt  SmartBridgeBleManager.kt  SmartBridgeService.kt
SmartBridge Android/app/src/main/res/drawable/: ic_molecule_logo.xml  ic_notification_logo.xml
SmartBridge Android/app/src/main/res/layout/: activity_main.xml  dialog_scan_list.xml  spinner_item.xml
SmartBridge Android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
SmartBridge Android/app/src/main/res/values-night/: colors.xml  themes.xml
SmartBridge Android/app/src/test/java/com/nilogax/smartbridge/: ExampleUnitTest.kt
SmartBridge Android/gradle/wrapper/: gradle-wrapper.properties
SmartBridge Arduino/: SmartBridge.ino
SmartBridge_Zephyr/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  prj_ant.conf
SmartBridge_Zephyr/src/: ant_bpwr.c  ant_bpwr.h  ant_common_page_82.h  ant_lev.c  ant_lev.h  main.c  version.h
xiao_ble_sense_s332/: Kconfig.board  Kconfig.defconfig  xiao_ble_sense_s332.dts  xiao_ble_sense_s332.yaml  xiao_ble_sense_s332_defconfig
